# PDPluginInterface

./: CMakeLists.txt  README.md
cmake/: PDPluginInterfaceConfig.cmake.in  PDPluginInterfaceMacros.cmake
include/PDPlugin/: PluginInterface.hpp
include/PDPlugin/PluginBase/: PDBaseTypes.hpp  QObjectPropertyMap.hpp
